testing/runner/tests/snapshot_tests/modifications/snapshots/modifications__update-where-unrelated-subquery-no-stable-write-set.snap
---
source: modifications.sqltest
expression: |-
  UPDATE products
      SET quantity = quantity + 1
      WHERE EXISTS (
          SELECT 1
          FROM users
          WHERE users.id = products.id
      );
info:
  statement_type: UPDATE
  tables:
  - products
  - users
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
   `--SEARCH users USING INTEGER PRIMARY KEY (rowid=?)

BYTECODE
addr  opcode           p1  p2  p3  p4            p5  comment
   0    Init            0  24   0                 0  Start at 24
   1    OpenWrite       0   2   0                 0  root=2; iDb=0
   2    Rewind          0  23   0                 0  Rewind table products
   3      BeginSubrtn   2   0   0                 0  r[2]=NULL
   4      Integer       0   1   0                 0  r[1]=0
   5      OpenRead      1   3   0  k(4,B,B,B,B)   0  table=users, root=3, iDb=0
   6      RowId         0   4   0                 0  r[4]=products.rowid
   7      SeekRowid     1   4   9                 0  if (r[4]!=cursor 1 for table users.rowid) goto 9
   8      Integer       1   1   0                 0  r[1]=1
   9    Return          2   0   1                 0
  10    IfNot           1  22   1                 0  if !r[1] goto 22
  11    RowId           0   5   0                 0  r[5]=products.rowid
  12    IsNull          5  23   0                 0  if (r[5]==NULL) goto 23
  13    Null            0   6   0                 0  r[6]=NULL
  14    Column          0   1   7                 0  r[7]=products.name
  15    Column          0   2   8                 0  r[8]=products.price
  16    Column          0   3  11  0              0  r[11]=products.quantity
  17    Add            11  12   9                 0  r[9]=r[11]+r[12]
  18    Column          0   4  10                 0  r[10]=products.category
  19    Affinity        6   5   0                 0  r[6..11] = D, B, E, D, B
  20    MakeRecord      6   5  13                 0  r[13]=mkrec(r[6..10])
  21    Insert          0  13   5  products       8  intkey=r[5] data=r[13]
  22  Next              0   3   0                 0
  23  Halt              0   0   0                 0
  24  Transaction       0   2  10                 0  iDb=0 tx_mode=Write
  25  Integer           1  12   0                 0  r[12]=1
  26  Goto              0   1   0                 0
